[package]
name = "terrars-hashicorp-gcp"
edition = "2021"
version = "0.1.0"
description = "Pre-generated Terrars GCP bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-hashicorp-gcp"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.7"

[features]
access_context_manager_access_level = []
access_context_manager_access_level_condition = []
access_context_manager_access_levels = []
access_context_manager_access_policy = []
access_context_manager_access_policy_iam_binding = []
access_context_manager_access_policy_iam_member = []
access_context_manager_access_policy_iam_policy = []
access_context_manager_authorized_orgs_desc = []
access_context_manager_egress_policy = []
access_context_manager_gcp_user_access_binding = []
access_context_manager_ingress_policy = []
access_context_manager_service_perimeter = []
access_context_manager_service_perimeter_egress_policy = []
access_context_manager_service_perimeter_ingress_policy = []
access_context_manager_service_perimeter_resource = []
access_context_manager_service_perimeters = []
active_directory_domain = []
active_directory_domain_trust = []
alloydb_backup = []
alloydb_cluster = []
alloydb_instance = []
alloydb_user = []
apigee_addons_config = []
apigee_endpoint_attachment = []
apigee_env_keystore = []
apigee_env_references = []
apigee_envgroup = []
apigee_envgroup_attachment = []
apigee_environment = []
apigee_environment_iam_binding = []
apigee_environment_iam_member = []
apigee_environment_iam_policy = []
apigee_flowhook = []
apigee_instance = []
apigee_instance_attachment = []
apigee_keystores_aliases_key_cert_file = []
apigee_keystores_aliases_pkcs12 = []
apigee_keystores_aliases_self_signed_cert = []
apigee_nat_address = []
apigee_organization = []
apigee_sharedflow = []
apigee_sharedflow_deployment = []
apigee_sync_authorization = []
apigee_target_server = []
apikeys_key = []
app_engine_application = []
app_engine_application_url_dispatch_rules = []
app_engine_domain_mapping = []
app_engine_firewall_rule = []
app_engine_flexible_app_version = []
app_engine_service_network_settings = []
app_engine_service_split_traffic = []
app_engine_standard_app_version = []
artifact_registry_repository = []
artifact_registry_repository_iam_binding = []
artifact_registry_repository_iam_member = []
artifact_registry_repository_iam_policy = []
assured_workloads_workload = []
beyondcorp_app_connection = []
beyondcorp_app_connector = []
beyondcorp_app_gateway = []
biglake_catalog = []
biglake_database = []
biglake_table = []
bigquery_analytics_hub_data_exchange = []
bigquery_analytics_hub_data_exchange_iam_binding = []
bigquery_analytics_hub_data_exchange_iam_member = []
bigquery_analytics_hub_data_exchange_iam_policy = []
bigquery_analytics_hub_listing = []
bigquery_analytics_hub_listing_iam_binding = []
bigquery_analytics_hub_listing_iam_member = []
bigquery_analytics_hub_listing_iam_policy = []
bigquery_bi_reservation = []
bigquery_capacity_commitment = []
bigquery_connection = []
bigquery_connection_iam_binding = []
bigquery_connection_iam_member = []
bigquery_connection_iam_policy = []
bigquery_data_transfer_config = []
bigquery_datapolicy_data_policy = []
bigquery_datapolicy_data_policy_iam_binding = []
bigquery_datapolicy_data_policy_iam_member = []
bigquery_datapolicy_data_policy_iam_policy = []
bigquery_dataset = []
bigquery_dataset_access = []
bigquery_dataset_iam_binding = []
bigquery_dataset_iam_member = []
bigquery_dataset_iam_policy = []
bigquery_job = []
bigquery_reservation = []
bigquery_reservation_assignment = []
bigquery_routine = []
bigquery_table = []
bigquery_table_iam_binding = []
bigquery_table_iam_member = []
bigquery_table_iam_policy = []
bigtable_app_profile = []
bigtable_gc_policy = []
bigtable_instance = []
bigtable_instance_iam_binding = []
bigtable_instance_iam_member = []
bigtable_instance_iam_policy = []
bigtable_table = []
bigtable_table_iam_binding = []
bigtable_table_iam_member = []
bigtable_table_iam_policy = []
billing_account_iam_binding = []
billing_account_iam_member = []
billing_account_iam_policy = []
billing_budget = []
billing_project_info = []
billing_subaccount = []
binary_authorization_attestor = []
binary_authorization_attestor_iam_binding = []
binary_authorization_attestor_iam_member = []
binary_authorization_attestor_iam_policy = []
binary_authorization_policy = []
certificate_manager_certificate = []
certificate_manager_certificate_issuance_config = []
certificate_manager_certificate_map = []
certificate_manager_certificate_map_entry = []
certificate_manager_dns_authorization = []
certificate_manager_trust_config = []
cloud_asset_folder_feed = []
cloud_asset_organization_feed = []
cloud_asset_project_feed = []
cloud_identity_group = []
cloud_identity_group_membership = []
cloud_ids_endpoint = []
cloud_run_domain_mapping = []
cloud_run_service = []
cloud_run_service_iam_binding = []
cloud_run_service_iam_member = []
cloud_run_service_iam_policy = []
cloud_run_v2_job = []
cloud_run_v2_job_iam_binding = []
cloud_run_v2_job_iam_member = []
cloud_run_v2_job_iam_policy = []
cloud_run_v2_service = []
cloud_run_v2_service_iam_binding = []
cloud_run_v2_service_iam_member = []
cloud_run_v2_service_iam_policy = []
cloud_scheduler_job = []
cloud_tasks_queue = []
cloud_tasks_queue_iam_binding = []
cloud_tasks_queue_iam_member = []
cloud_tasks_queue_iam_policy = []
cloudbuild_bitbucket_server_config = []
cloudbuild_trigger = []
cloudbuild_worker_pool = []
cloudbuildv2_connection = []
cloudbuildv2_connection_iam_binding = []
cloudbuildv2_connection_iam_member = []
cloudbuildv2_connection_iam_policy = []
cloudbuildv2_repository = []
clouddeploy_delivery_pipeline = []
clouddeploy_target = []
cloudfunctions2_function = []
cloudfunctions2_function_iam_binding = []
cloudfunctions2_function_iam_member = []
cloudfunctions2_function_iam_policy = []
cloudfunctions_function = []
cloudfunctions_function_iam_binding = []
cloudfunctions_function_iam_member = []
cloudfunctions_function_iam_policy = []
composer_environment = []
compute_address = []
compute_attached_disk = []
compute_autoscaler = []
compute_backend_bucket = []
compute_backend_bucket_signed_url_key = []
compute_backend_service = []
compute_backend_service_signed_url_key = []
compute_disk = []
compute_disk_async_replication = []
compute_disk_iam_binding = []
compute_disk_iam_member = []
compute_disk_iam_policy = []
compute_disk_resource_policy_attachment = []
compute_external_vpn_gateway = []
compute_firewall = []
compute_firewall_policy = []
compute_firewall_policy_association = []
compute_firewall_policy_rule = []
compute_forwarding_rule = []
compute_global_address = []
compute_global_forwarding_rule = []
compute_global_network_endpoint = []
compute_global_network_endpoint_group = []
compute_ha_vpn_gateway = []
compute_health_check = []
compute_http_health_check = []
compute_https_health_check = []
compute_image = []
compute_image_iam_binding = []
compute_image_iam_member = []
compute_image_iam_policy = []
compute_instance = []
compute_instance_from_template = []
compute_instance_group = []
compute_instance_group_manager = []
compute_instance_group_named_port = []
compute_instance_iam_binding = []
compute_instance_iam_member = []
compute_instance_iam_policy = []
compute_instance_template = []
compute_interconnect_attachment = []
compute_managed_ssl_certificate = []
compute_network = []
compute_network_endpoint = []
compute_network_endpoint_group = []
compute_network_endpoints = []
compute_network_firewall_policy = []
compute_network_firewall_policy_association = []
compute_network_firewall_policy_rule = []
compute_network_peering = []
compute_network_peering_routes_config = []
compute_node_group = []
compute_node_template = []
compute_packet_mirroring = []
compute_per_instance_config = []
compute_project_default_network_tier = []
compute_project_metadata = []
compute_project_metadata_item = []
compute_public_advertised_prefix = []
compute_public_delegated_prefix = []
compute_region_autoscaler = []
compute_region_backend_service = []
compute_region_commitment = []
compute_region_disk = []
compute_region_disk_iam_binding = []
compute_region_disk_iam_member = []
compute_region_disk_iam_policy = []
compute_region_disk_resource_policy_attachment = []
compute_region_health_check = []
compute_region_instance_group_manager = []
compute_region_instance_template = []
compute_region_network_endpoint_group = []
compute_region_network_firewall_policy = []
compute_region_network_firewall_policy_association = []
compute_region_network_firewall_policy_rule = []
compute_region_per_instance_config = []
compute_region_ssl_certificate = []
compute_region_ssl_policy = []
compute_region_target_http_proxy = []
compute_region_target_https_proxy = []
compute_region_target_tcp_proxy = []
compute_region_url_map = []
compute_reservation = []
compute_resource_policy = []
compute_route = []
compute_router = []
compute_router_interface = []
compute_router_nat = []
compute_router_peer = []
compute_security_policy = []
compute_service_attachment = []
compute_shared_vpc_host_project = []
compute_shared_vpc_service_project = []
compute_snapshot = []
compute_snapshot_iam_binding = []
compute_snapshot_iam_member = []
compute_snapshot_iam_policy = []
compute_ssl_certificate = []
compute_ssl_policy = []
compute_subnetwork = []
compute_subnetwork_iam_binding = []
compute_subnetwork_iam_member = []
compute_subnetwork_iam_policy = []
compute_target_grpc_proxy = []
compute_target_http_proxy = []
compute_target_https_proxy = []
compute_target_instance = []
compute_target_pool = []
compute_target_ssl_proxy = []
compute_target_tcp_proxy = []
compute_url_map = []
compute_vpn_gateway = []
compute_vpn_tunnel = []
container_analysis_note = []
container_analysis_note_iam_binding = []
container_analysis_note_iam_member = []
container_analysis_note_iam_policy = []
container_analysis_occurrence = []
container_attached_cluster = []
container_aws_cluster = []
container_aws_node_pool = []
container_azure_client = []
container_azure_cluster = []
container_azure_node_pool = []
container_cluster = []
container_node_pool = []
container_registry = []
data_access_approval_folder_service_account = []
data_access_approval_organization_service_account = []
data_access_approval_project_service_account = []
data_access_context_manager_access_policy_iam_policy = []
data_active_folder = []
data_alloydb_locations = []
data_alloydb_supported_database_flags = []
data_apigee_environment_iam_policy = []
data_app_engine_default_service_account = []
data_artifact_registry_repository = []
data_artifact_registry_repository_iam_policy = []
data_beyondcorp_app_connection = []
data_beyondcorp_app_connector = []
data_beyondcorp_app_gateway = []
data_bigquery_analytics_hub_data_exchange_iam_policy = []
data_bigquery_analytics_hub_listing_iam_policy = []
data_bigquery_connection_iam_policy = []
data_bigquery_datapolicy_data_policy_iam_policy = []
data_bigquery_dataset = []
data_bigquery_dataset_iam_policy = []
data_bigquery_default_service_account = []
data_bigquery_table_iam_policy = []
data_bigtable_instance_iam_policy = []
data_bigtable_table_iam_policy = []
data_billing_account = []
data_billing_account_iam_policy = []
data_binary_authorization_attestor_iam_policy = []
data_catalog_entry = []
data_catalog_entry_group = []
data_catalog_entry_group_iam_binding = []
data_catalog_entry_group_iam_member = []
data_catalog_entry_group_iam_policy = []
data_catalog_policy_tag = []
data_catalog_policy_tag_iam_binding = []
data_catalog_policy_tag_iam_member = []
data_catalog_policy_tag_iam_policy = []
data_catalog_tag = []
data_catalog_tag_template = []
data_catalog_tag_template_iam_binding = []
data_catalog_tag_template_iam_member = []
data_catalog_tag_template_iam_policy = []
data_catalog_taxonomy = []
data_catalog_taxonomy_iam_binding = []
data_catalog_taxonomy_iam_member = []
data_catalog_taxonomy_iam_policy = []
data_certificate_manager_certificate_map = []
data_client_config = []
data_client_openid_userinfo = []
data_cloud_identity_group_lookup = []
data_cloud_identity_group_memberships = []
data_cloud_identity_groups = []
data_cloud_run_locations = []
data_cloud_run_service = []
data_cloud_run_service_iam_policy = []
data_cloud_run_v2_job = []
data_cloud_run_v2_job_iam_policy = []
data_cloud_run_v2_service = []
data_cloud_run_v2_service_iam_policy = []
data_cloud_tasks_queue_iam_policy = []
data_cloudbuild_trigger = []
data_cloudbuildv2_connection_iam_policy = []
data_cloudfunctions2_function = []
data_cloudfunctions2_function_iam_policy = []
data_cloudfunctions_function = []
data_cloudfunctions_function_iam_policy = []
data_composer_environment = []
data_composer_image_versions = []
data_compute_address = []
data_compute_addresses = []
data_compute_backend_bucket = []
data_compute_backend_service = []
data_compute_default_service_account = []
data_compute_disk = []
data_compute_disk_iam_policy = []
data_compute_forwarding_rule = []
data_compute_global_address = []
data_compute_global_forwarding_rule = []
data_compute_ha_vpn_gateway = []
data_compute_health_check = []
data_compute_image = []
data_compute_image_iam_policy = []
data_compute_instance = []
data_compute_instance_group = []
data_compute_instance_group_manager = []
data_compute_instance_iam_policy = []
data_compute_instance_serial_port = []
data_compute_instance_template = []
data_compute_lb_ip_ranges = []
data_compute_network = []
data_compute_network_endpoint_group = []
data_compute_network_peering = []
data_compute_networks = []
data_compute_node_types = []
data_compute_region_disk = []
data_compute_region_disk_iam_policy = []
data_compute_region_instance_group = []
data_compute_region_instance_template = []
data_compute_region_network_endpoint_group = []
data_compute_region_ssl_certificate = []
data_compute_regions = []
data_compute_resource_policy = []
data_compute_router = []
data_compute_router_nat = []
data_compute_router_status = []
data_compute_snapshot = []
data_compute_snapshot_iam_policy = []
data_compute_ssl_certificate = []
data_compute_ssl_policy = []
data_compute_subnetwork = []
data_compute_subnetwork_iam_policy = []
data_compute_vpn_gateway = []
data_compute_zones = []
data_container_analysis_note_iam_policy = []
data_container_attached_install_manifest = []
data_container_attached_versions = []
data_container_aws_versions = []
data_container_azure_versions = []
data_container_cluster = []
data_container_engine_versions = []
data_container_registry_image = []
data_container_registry_repository = []
data_data_catalog_entry_group_iam_policy = []
data_data_catalog_policy_tag_iam_policy = []
data_data_catalog_tag_template_iam_policy = []
data_data_catalog_taxonomy_iam_policy = []
data_data_fusion_instance_iam_policy = []
data_dataplex_asset_iam_policy = []
data_dataplex_datascan_iam_policy = []
data_dataplex_lake_iam_policy = []
data_dataplex_task_iam_policy = []
data_dataplex_zone_iam_policy = []
data_dataproc_autoscaling_policy_iam_policy = []
data_dataproc_cluster_iam_policy = []
data_dataproc_job_iam_policy = []
data_dataproc_metastore_service = []
data_dataproc_metastore_service_iam_policy = []
data_datastream_static_ips = []
data_dns_keys = []
data_dns_managed_zone = []
data_dns_managed_zone_iam_policy = []
data_dns_record_set = []
data_endpoints_service_consumers_iam_policy = []
data_endpoints_service_iam_policy = []
data_folder = []
data_folder_iam_policy = []
data_folder_organization_policy = []
data_folders = []
data_fusion_instance = []
data_fusion_instance_iam_binding = []
data_fusion_instance_iam_member = []
data_fusion_instance_iam_policy = []
data_gke_backup_backup_plan_iam_policy = []
data_gke_backup_restore_plan_iam_policy = []
data_gke_hub_feature_iam_policy = []
data_gke_hub_membership_iam_policy = []
data_gke_hub_scope_iam_policy = []
data_healthcare_consent_store_iam_policy = []
data_healthcare_dataset_iam_policy = []
data_healthcare_dicom_store_iam_policy = []
data_healthcare_fhir_store_iam_policy = []
data_healthcare_hl7_v2_store_iam_policy = []
data_iam_policy = []
data_iam_role = []
data_iam_testable_permissions = []
data_iap_app_engine_service_iam_policy = []
data_iap_app_engine_version_iam_policy = []
data_iap_client = []
data_iap_tunnel_iam_policy = []
data_iap_tunnel_instance_iam_policy = []
data_iap_web_backend_service_iam_policy = []
data_iap_web_iam_policy = []
data_iap_web_region_backend_service_iam_policy = []
data_iap_web_type_app_engine_iam_policy = []
data_iap_web_type_compute_iam_policy = []
data_kms_crypto_key = []
data_kms_crypto_key_iam_policy = []
data_kms_crypto_key_version = []
data_kms_key_ring = []
data_kms_key_ring_iam_policy = []
data_kms_secret = []
data_kms_secret_ciphertext = []
data_logging_folder_settings = []
data_logging_organization_settings = []
data_logging_project_cmek_settings = []
data_logging_project_settings = []
data_logging_sink = []
data_loss_prevention_inspect_template = []
data_loss_prevention_job_trigger = []
data_loss_prevention_stored_info_type = []
data_monitoring_app_engine_service = []
data_monitoring_cluster_istio_service = []
data_monitoring_istio_canonical_service = []
data_monitoring_mesh_istio_service = []
data_monitoring_notification_channel = []
data_monitoring_uptime_check_ips = []
data_netblock_ip_ranges = []
data_notebooks_instance_iam_policy = []
data_notebooks_runtime_iam_policy = []
data_organization = []
data_organization_iam_policy = []
data_pipeline_pipeline = []
data_privateca_ca_pool_iam_policy = []
data_privateca_certificate_authority = []
data_privateca_certificate_template_iam_policy = []
data_project = []
data_project_iam_policy = []
data_project_organization_policy = []
data_project_service = []
data_projects = []
data_pubsub_schema_iam_policy = []
data_pubsub_subscription = []
data_pubsub_subscription_iam_policy = []
data_pubsub_topic = []
data_pubsub_topic_iam_policy = []
data_redis_instance = []
data_scc_source_iam_policy = []
data_secret_manager_secret = []
data_secret_manager_secret_iam_policy = []
data_secret_manager_secret_version = []
data_secret_manager_secret_version_access = []
data_secret_manager_secrets = []
data_secure_source_manager_instance_iam_policy = []
data_service_account = []
data_service_account_access_token = []
data_service_account_iam_policy = []
data_service_account_id_token = []
data_service_account_jwt = []
data_service_account_key = []
data_service_networking_peered_dns_domain = []
data_sourcerepo_repository = []
data_sourcerepo_repository_iam_policy = []
data_spanner_database_iam_policy = []
data_spanner_instance = []
data_spanner_instance_iam_policy = []
data_sql_backup_run = []
data_sql_ca_certs = []
data_sql_database = []
data_sql_database_instance = []
data_sql_database_instance_latest_recovery_time = []
data_sql_database_instances = []
data_sql_databases = []
data_sql_tiers = []
data_storage_bucket = []
data_storage_bucket_iam_policy = []
data_storage_bucket_object = []
data_storage_bucket_object_content = []
data_storage_object_signed_url = []
data_storage_project_service_account = []
data_storage_transfer_project_service_account = []
data_tags_tag_key = []
data_tags_tag_key_iam_policy = []
data_tags_tag_value = []
data_tags_tag_value_iam_policy = []
data_tpu_tensorflow_versions = []
data_vertex_ai_index = []
data_vmwareengine_cluster = []
data_vmwareengine_external_address = []
data_vmwareengine_network = []
data_vmwareengine_network_peering = []
data_vmwareengine_network_policy = []
data_vmwareengine_nsx_credentials = []
data_vmwareengine_private_cloud = []
data_vmwareengine_subnet = []
data_vmwareengine_vcenter_credentials = []
data_vpc_access_connector = []
data_workbench_instance_iam_policy = []
database_migration_service_connection_profile = []
database_migration_service_private_connection = []
dataflow_job = []
dataplex_asset = []
dataplex_asset_iam_binding = []
dataplex_asset_iam_member = []
dataplex_asset_iam_policy = []
dataplex_datascan = []
dataplex_datascan_iam_binding = []
dataplex_datascan_iam_member = []
dataplex_datascan_iam_policy = []
dataplex_lake = []
dataplex_lake_iam_binding = []
dataplex_lake_iam_member = []
dataplex_lake_iam_policy = []
dataplex_task = []
dataplex_task_iam_binding = []
dataplex_task_iam_member = []
dataplex_task_iam_policy = []
dataplex_zone = []
dataplex_zone_iam_binding = []
dataplex_zone_iam_member = []
dataplex_zone_iam_policy = []
dataproc_autoscaling_policy = []
dataproc_autoscaling_policy_iam_binding = []
dataproc_autoscaling_policy_iam_member = []
dataproc_autoscaling_policy_iam_policy = []
dataproc_cluster = []
dataproc_cluster_iam_binding = []
dataproc_cluster_iam_member = []
dataproc_cluster_iam_policy = []
dataproc_job = []
dataproc_job_iam_binding = []
dataproc_job_iam_member = []
dataproc_job_iam_policy = []
dataproc_metastore_service = []
dataproc_metastore_service_iam_binding = []
dataproc_metastore_service_iam_member = []
dataproc_metastore_service_iam_policy = []
dataproc_workflow_template = []
datastore_index = []
datastream_connection_profile = []
datastream_private_connection = []
datastream_stream = []
deployment_manager_deployment = []
dialogflow_agent = []
dialogflow_cx_agent = []
dialogflow_cx_entity_type = []
dialogflow_cx_environment = []
dialogflow_cx_flow = []
dialogflow_cx_intent = []
dialogflow_cx_page = []
dialogflow_cx_security_settings = []
dialogflow_cx_test_case = []
dialogflow_cx_version = []
dialogflow_cx_webhook = []
dialogflow_entity_type = []
dialogflow_fulfillment = []
dialogflow_intent = []
dns_managed_zone = []
dns_managed_zone_iam_binding = []
dns_managed_zone_iam_member = []
dns_managed_zone_iam_policy = []
dns_policy = []
dns_record_set = []
dns_response_policy = []
dns_response_policy_rule = []
document_ai_processor = []
document_ai_processor_default_version = []
document_ai_warehouse_document_schema = []
document_ai_warehouse_location = []
edgecontainer_cluster = []
edgecontainer_node_pool = []
edgecontainer_vpn_connection = []
edgenetwork_network = []
edgenetwork_subnet = []
endpoints_service = []
endpoints_service_consumers_iam_binding = []
endpoints_service_consumers_iam_member = []
endpoints_service_consumers_iam_policy = []
endpoints_service_iam_binding = []
endpoints_service_iam_member = []
endpoints_service_iam_policy = []
essential_contacts_contact = []
eventarc_channel = []
eventarc_google_channel_config = []
eventarc_trigger = []
filestore_backup = []
filestore_instance = []
filestore_snapshot = []
firebaserules_release = []
firebaserules_ruleset = []
firestore_backup_schedule = []
firestore_database = []
firestore_document = []
firestore_field = []
firestore_index = []
folder = []
folder_access_approval_settings = []
folder_iam_audit_config = []
folder_iam_binding = []
folder_iam_member = []
folder_iam_policy = []
folder_organization_policy = []
gke_backup_backup_plan = []
gke_backup_backup_plan_iam_binding = []
gke_backup_backup_plan_iam_member = []
gke_backup_backup_plan_iam_policy = []
gke_backup_restore_plan = []
gke_backup_restore_plan_iam_binding = []
gke_backup_restore_plan_iam_member = []
gke_backup_restore_plan_iam_policy = []
gke_hub_feature = []
gke_hub_feature_iam_binding = []
gke_hub_feature_iam_member = []
gke_hub_feature_iam_policy = []
gke_hub_feature_membership = []
gke_hub_fleet = []
gke_hub_membership = []
gke_hub_membership_binding = []
gke_hub_membership_iam_binding = []
gke_hub_membership_iam_member = []
gke_hub_membership_iam_policy = []
gke_hub_namespace = []
gke_hub_scope = []
gke_hub_scope_iam_binding = []
gke_hub_scope_iam_member = []
gke_hub_scope_iam_policy = []
gke_hub_scope_rbac_role_binding = []
gkeonprem_bare_metal_admin_cluster = []
gkeonprem_bare_metal_cluster = []
gkeonprem_bare_metal_node_pool = []
gkeonprem_vmware_cluster = []
gkeonprem_vmware_node_pool = []
healthcare_consent_store = []
healthcare_consent_store_iam_binding = []
healthcare_consent_store_iam_member = []
healthcare_consent_store_iam_policy = []
healthcare_dataset = []
healthcare_dataset_iam_binding = []
healthcare_dataset_iam_member = []
healthcare_dataset_iam_policy = []
healthcare_dicom_store = []
healthcare_dicom_store_iam_binding = []
healthcare_dicom_store_iam_member = []
healthcare_dicom_store_iam_policy = []
healthcare_fhir_store = []
healthcare_fhir_store_iam_binding = []
healthcare_fhir_store_iam_member = []
healthcare_fhir_store_iam_policy = []
healthcare_hl7_v2_store = []
healthcare_hl7_v2_store_iam_binding = []
healthcare_hl7_v2_store_iam_member = []
healthcare_hl7_v2_store_iam_policy = []
iam_access_boundary_policy = []
iam_deny_policy = []
iam_workforce_pool = []
iam_workforce_pool_provider = []
iam_workload_identity_pool = []
iam_workload_identity_pool_provider = []
iap_app_engine_service_iam_binding = []
iap_app_engine_service_iam_member = []
iap_app_engine_service_iam_policy = []
iap_app_engine_version_iam_binding = []
iap_app_engine_version_iam_member = []
iap_app_engine_version_iam_policy = []
iap_brand = []
iap_client = []
iap_tunnel_iam_binding = []
iap_tunnel_iam_member = []
iap_tunnel_iam_policy = []
iap_tunnel_instance_iam_binding = []
iap_tunnel_instance_iam_member = []
iap_tunnel_instance_iam_policy = []
iap_web_backend_service_iam_binding = []
iap_web_backend_service_iam_member = []
iap_web_backend_service_iam_policy = []
iap_web_iam_binding = []
iap_web_iam_member = []
iap_web_iam_policy = []
iap_web_region_backend_service_iam_binding = []
iap_web_region_backend_service_iam_member = []
iap_web_region_backend_service_iam_policy = []
iap_web_type_app_engine_iam_binding = []
iap_web_type_app_engine_iam_member = []
iap_web_type_app_engine_iam_policy = []
iap_web_type_compute_iam_binding = []
iap_web_type_compute_iam_member = []
iap_web_type_compute_iam_policy = []
identity_platform_config = []
identity_platform_default_supported_idp_config = []
identity_platform_inbound_saml_config = []
identity_platform_oauth_idp_config = []
identity_platform_project_default_config = []
identity_platform_tenant = []
identity_platform_tenant_default_supported_idp_config = []
identity_platform_tenant_inbound_saml_config = []
identity_platform_tenant_oauth_idp_config = []
integration_connectors_connection = []
kms_crypto_key = []
kms_crypto_key_iam_binding = []
kms_crypto_key_iam_member = []
kms_crypto_key_iam_policy = []
kms_crypto_key_version = []
kms_key_ring = []
kms_key_ring_iam_binding = []
kms_key_ring_iam_member = []
kms_key_ring_iam_policy = []
kms_key_ring_import_job = []
kms_secret_ciphertext = []
logging_billing_account_bucket_config = []
logging_billing_account_exclusion = []
logging_billing_account_sink = []
logging_folder_bucket_config = []
logging_folder_exclusion = []
logging_folder_sink = []
logging_linked_dataset = []
logging_log_view = []
logging_metric = []
logging_organization_bucket_config = []
logging_organization_exclusion = []
logging_organization_sink = []
logging_project_bucket_config = []
logging_project_exclusion = []
logging_project_sink = []
looker_instance = []
memcache_instance = []
migration_center_group = []
ml_engine_model = []
monitoring_alert_policy = []
monitoring_custom_service = []
monitoring_dashboard = []
monitoring_group = []
monitoring_metric_descriptor = []
monitoring_monitored_project = []
monitoring_notification_channel = []
monitoring_service = []
monitoring_slo = []
monitoring_uptime_check_config = []
netapp_storage_pool = []
network_connectivity_hub = []
network_connectivity_policy_based_route = []
network_connectivity_service_connection_policy = []
network_connectivity_spoke = []
network_management_connectivity_test = []
network_security_address_group = []
network_security_gateway_security_policy = []
network_security_gateway_security_policy_rule = []
network_security_url_lists = []
network_services_edge_cache_keyset = []
network_services_edge_cache_origin = []
network_services_edge_cache_service = []
network_services_gateway = []
notebooks_environment = []
notebooks_instance = []
notebooks_instance_iam_binding = []
notebooks_instance_iam_member = []
notebooks_instance_iam_policy = []
notebooks_location = []
notebooks_runtime = []
notebooks_runtime_iam_binding = []
notebooks_runtime_iam_member = []
notebooks_runtime_iam_policy = []
org_policy_custom_constraint = []
org_policy_policy = []
organization_access_approval_settings = []
organization_iam_audit_config = []
organization_iam_binding = []
organization_iam_custom_role = []
organization_iam_member = []
organization_iam_policy = []
organization_policy = []
os_config_os_policy_assignment = []
os_config_patch_deployment = []
os_login_ssh_public_key = []
privateca_ca_pool = []
privateca_ca_pool_iam_binding = []
privateca_ca_pool_iam_member = []
privateca_ca_pool_iam_policy = []
privateca_certificate = []
privateca_certificate_authority = []
privateca_certificate_template = []
privateca_certificate_template_iam_binding = []
privateca_certificate_template_iam_member = []
privateca_certificate_template_iam_policy = []
project = []
project_access_approval_settings = []
project_default_service_accounts = []
project_iam_audit_config = []
project_iam_binding = []
project_iam_custom_role = []
project_iam_member = []
project_iam_policy = []
project_organization_policy = []
project_service = []
project_usage_export_bucket = []
public_ca_external_account_key = []
pubsub_lite_reservation = []
pubsub_lite_subscription = []
pubsub_lite_topic = []
pubsub_schema = []
pubsub_schema_iam_binding = []
pubsub_schema_iam_member = []
pubsub_schema_iam_policy = []
pubsub_subscription = []
pubsub_subscription_iam_binding = []
pubsub_subscription_iam_member = []
pubsub_subscription_iam_policy = []
pubsub_topic = []
pubsub_topic_iam_binding = []
pubsub_topic_iam_member = []
pubsub_topic_iam_policy = []
recaptcha_enterprise_key = []
redis_cluster = []
redis_instance = []
resource_manager_lien = []
scc_event_threat_detection_custom_module = []
scc_folder_custom_module = []
scc_mute_config = []
scc_notification_config = []
scc_organization_custom_module = []
scc_project_custom_module = []
scc_source = []
scc_source_iam_binding = []
scc_source_iam_member = []
scc_source_iam_policy = []
secret_manager_secret = []
secret_manager_secret_iam_binding = []
secret_manager_secret_iam_member = []
secret_manager_secret_iam_policy = []
secret_manager_secret_version = []
secure_source_manager_instance = []
secure_source_manager_instance_iam_binding = []
secure_source_manager_instance_iam_member = []
secure_source_manager_instance_iam_policy = []
service_account = []
service_account_iam_binding = []
service_account_iam_member = []
service_account_iam_policy = []
service_account_key = []
service_networking_connection = []
service_networking_peered_dns_domain = []
sourcerepo_repository = []
sourcerepo_repository_iam_binding = []
sourcerepo_repository_iam_member = []
sourcerepo_repository_iam_policy = []
spanner_database = []
spanner_database_iam_binding = []
spanner_database_iam_member = []
spanner_database_iam_policy = []
spanner_instance = []
spanner_instance_iam_binding = []
spanner_instance_iam_member = []
spanner_instance_iam_policy = []
sql_database = []
sql_database_instance = []
sql_source_representation_instance = []
sql_ssl_cert = []
sql_user = []
storage_bucket = []
storage_bucket_access_control = []
storage_bucket_acl = []
storage_bucket_iam_binding = []
storage_bucket_iam_member = []
storage_bucket_iam_policy = []
storage_bucket_object = []
storage_default_object_access_control = []
storage_default_object_acl = []
storage_hmac_key = []
storage_insights_report_config = []
storage_notification = []
storage_object_access_control = []
storage_object_acl = []
storage_transfer_agent_pool = []
storage_transfer_job = []
tags_location_tag_binding = []
tags_tag_binding = []
tags_tag_key = []
tags_tag_key_iam_binding = []
tags_tag_key_iam_member = []
tags_tag_key_iam_policy = []
tags_tag_value = []
tags_tag_value_iam_binding = []
tags_tag_value_iam_member = []
tags_tag_value_iam_policy = []
tpu_node = []
vertex_ai_dataset = []
vertex_ai_endpoint = []
vertex_ai_featurestore = []
vertex_ai_featurestore_entitytype = []
vertex_ai_featurestore_entitytype_feature = []
vertex_ai_index = []
vertex_ai_index_endpoint = []
vertex_ai_tensorboard = []
vmwareengine_cluster = []
vmwareengine_external_address = []
vmwareengine_network = []
vmwareengine_network_peering = []
vmwareengine_network_policy = []
vmwareengine_private_cloud = []
vmwareengine_subnet = []
vpc_access_connector = []
workbench_instance = []
workbench_instance_iam_binding = []
workbench_instance_iam_member = []
workbench_instance_iam_policy = []
workflows_workflow = []
